fix(layout): app screen for small devices stretch to screen horizontally
Related #67

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -2,4 +2,5 @@
 
 body {
     font-size: 16px;
+    min-width: 340px; /* min-width for supported devices */
 }
